@@ -72,6 +72,11 @@ dnl *** Check for i18n support ***
 dnl ******************************
 XDT_I18N([@LINGUAS@])
 
+dnl ********************************
+dnl *** Check for X11 (optional) ***
+dnl ********************************
+XDT_CHECK_LIBX11()
+
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
