@@ -1,5 +1,10 @@
 2007-02-12	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in, terminal/terminal-shortcut-editor.c,
+	  terminal/Makefile.am: Link to -lx11. Bug #2870.
+
+2007-02-12	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-dbus.c: Apply Brian's patch to fix invalid
 	  variable type for user id. Bug #2898.
 
